--- a/coast.css
+++ b/coast.css
@@ -112,6 +112,8 @@ right: 20px;
   border-bottom: 1px solid rgba(var(--black), 0.5);
   padding-bottom: 5px; 
   padding-left: 40px; 
+	  line-height: 10px; !important 
+
 } 
 
 .coast-tag  a.user-tagged  { 
