--- a/fir.css
+++ b/fir.css
@@ -263,6 +263,7 @@ opacity: 0;
   left: 400px;      
   line-height: 75px;
   font-weight: 500; 
+    letter-spacing: 0.5px; 
   -webkit-transition: ease-in-out 0.5s;  
    -ms-transition: ease-in-out 0.5s;  
    -moz-transition: ease-in-out 0.5s;  
@@ -273,7 +274,7 @@ opacity: 0;
   font-size: 15px; 
   color: rgba(var(--white));
   position: relative; 
-  right: 50px; 
+  right: 60px; 
   top: -15px;
 text-shadow: 1px 1px rgba(var(--black),0.5);
 padding: 0px 5px; 
@@ -281,6 +282,7 @@ text-align: center;
 font-weight: 500;
 background: rgba(var(--hmain),0.2);
 border-radius: 5px;
+   letter-spacing: 0px; 
 } 
 
 .fir-thread { 
