--- a/fir.css
+++ b/fir.css
@@ -254,7 +254,7 @@ opacity: 0;
   overflow: hidden;
   text-align: right; 
   width:80px; 
-  height: 33px; 
+  height: 40px; 
   color: rgba(var(--black), 0.8);
   position: sticky; 
   top: 0px; 
@@ -263,7 +263,7 @@ opacity: 0;
   left: 400px;      
   line-height: 75px;
   font-weight: 500; 
-  letter-spacing: 1.3px; 
+    letter-spacing: 1.3px; 
   -webkit-transition: ease-in-out 0.5s;  
    -ms-transition: ease-in-out 0.5s;  
    -moz-transition: ease-in-out 0.5s;  
@@ -274,7 +274,7 @@ opacity: 0;
   font-size: 15px; 
   color: rgba(var(--white));
   position: relative; 
-  right: 30px; 
+  right: 40px; 
   top: -15px;
 text-shadow: 1px 1px rgba(var(--black),0.5);
 padding: 0px 5px; 
@@ -283,6 +283,7 @@ font-weight: 500;
 background: rgba(var(--hmain),0.2);
 border-radius: 5px;
    letter-spacing: 0px; 
+  opacity: 0.8; 
 } 
 
 .fir-thread { 
