--- a/coast.css
+++ b/coast.css
@@ -193,6 +193,12 @@ background: rgba(var(--haccent), 0.4);
 --haccent: 175, 156, 158;
 } 
 
+#dd { 
+--hmain: 139, 148, 97; 
+--haccent: 193, 146, 149;
+} 
+
+
 #es { 
  --hmain: 74, 97, 110;
 --haccent: 191, 166, 125;
