--- a/oc-colors.css
+++ b/oc-colors.css
@@ -1,48 +1,73 @@
-  #db { 
---hmain: 68, 126, 128;
---haccent: 196, 136, 88; 
-  } 
+#dh { 
+--hmain: 94, 110, 130; 
+--haccent: 175, 156, 158;
+} 
+
+#dd { 
+--hmain: 139, 148, 97; 
+--haccent: 193, 146, 149;
+} 
+
+  #jl {
+--hmain: 116, 139, 111;
+--haccent: 153, 167, 152;
+}
+
+#lb {
+--hmain: 143, 61, 65; 
+--haccent:115, 136, 149;
+ }
+
+#rc {
+--hmain: 119, 67, 92;
+--haccent: 200, 134, 97;
+}
+
+  #ti {
+--haccent: 109, 157, 194;
+--hmain: 105, 164, 138;
+}
+
+#wm { 
+  --hmain:106, 150, 168;
+--haccent: 204, 176, 124; 
+} 
+
+ #ya { 
+ --hmain: 183, 65, 45; 
+--haccent:218, 155, 99;
+} 
+
+/*old*/ 
+
 
 #dh { 
 --hmain: 94, 110, 130; 
 --haccent: 175, 156, 158;
 } 
 
-#es { 
- --hmain: 74, 97, 110;
---haccent: 191, 166, 125;
-  }
-  
+/*old june colors 
+
   #jl {
 --hmain: 132, 148, 148;
 --haccent: 187, 153, 153;
-}
+}*/ 
 
 #kb {
 --haccent: 195, 143, 61;
 --hmain: 86, 132, 105;
 }
 
-  #lb { 
---hmain: 143, 61, 65; 
---haccent:115, 136, 149;
-} 
-
-
 #mj { 
 --hmain: 195, 120, 85;
 --haccent: 137, 185, 177;
 } 
-  
+
+
  #pk { 
 --hmain: 153, 97, 120;
 --haccent: 165, 163, 184;
 } 
-
-#rc {
---hmain: 119, 67, 92;
---haccent: 200, 134, 97;
-}
 
   #rl {
 --haccent: 185, 195, 163;
@@ -54,23 +79,7 @@
   --haccent: 192, 125, 142;
 }
 
-  #ti {
---hmain: 109, 157, 194;
---haccent: 105, 164, 138;
-}
-
 #td {
 --hmain: 131, 31, 39;
 --haccent: 101, 113, 91;
 }
-
-
- #ya { 
- --hmain: 183, 65, 45; 
---haccent:218, 155, 99;
-} 
-
-#wm { 
-  --hmain:133, 160, 82;
---haccent: 224, 146, 33; 
-} 
