--- a/oc-colors.css
+++ b/oc-colors.css
@@ -8,6 +8,13 @@
 --haccent: 193, 146, 149;
 } 
 
+#es { 
+ --hmain: 74, 97, 110;
+--haccent: 191, 166, 125;
+
+}
+
+
   #jl {
 --hmain: 116, 139, 111;
 --haccent: 153, 167, 152;
