--- a/coast.css
+++ b/coast.css
@@ -193,7 +193,7 @@ background: rgba(var(--haccent), 0.4);
 --haccent: 175, 156, 158;
 } 
 
-#dd { 
+#dusty { 
 --hmain: 139, 148, 97; 
 --haccent: 193, 146, 149;
 } 
